[bugfix] - show more container text misalign

--- a/style.css
+++ b/style.css
@@ -637,6 +637,10 @@ nav ul li a{
     margin-top: 20px;
   }
 
+  .more-exp-container .timeline-item {
+    text-align: left;
+  }
+
   .show-more {
     background-color: var(--gradient-primary);
     padding: 10px 20px;
